overflow X correction

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -7,6 +7,8 @@
 body {
 	margin: 0;
 	background-color: #F8F8F8;
+	overflow-x: hidden;
+
 }
 
 /***** ALIGNMENTS *******/
